style.css
/* ... */
.skills-link{
    border: 3px solid #d47636;
}

.skills-link:hover{
    background: #d47636;
}

.skills-link.active-link{
    color: #1b1729;
    border: 3px solid #d47636;
    background: #d47636;
}

.education-link{
    border: 3px solid #c6aed2;
}

.education-link:hover{
    background: #c6aed2;
}

.education-link.active-link{
    color: #1b1729;
    border: 3px solid #c6aed2;
    background: #c6aed2;
}

.experience-link{
    border: 3px solid #80c3b3;
}

.experience-link:hover{
    background: #80c3b3;
}

.experience-link.active-link{
    color: #1b1729;
    border: 3px solid #80c3b3;
    background: #80c3b3;
}

.tab-contents.skills.active-tab{
    display: flex;
    flex-wrap: wrap;
}

.skillcard{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-bottom: 20px;
}

.skillcard img{
    margin: 10px 20px;
    width: 70px;
    height: 70px;
    border-radius: 50%;
    background: #646b89;
    box-shadow: 0px 0px 3px 3px #6e78a5;
}

.skillcard h3{
    font-size: 16px;
}

.tab-contents ul li{
    font-size: 18px;
    font-weight: 500;
    line-height: 1.5;
    list-style: none;
    margin: 10px 0;
}

.tab-contents ul li span{
    color: #e2e2f8;
    font-weight: 500;
    font-size: 20px;
    font-weight: 580;
}

.tab-contents{
    display: none;
}

.tab-contents.active-tab{
    display: block;
}

/*------------------------services-----------------------*/

#services{
    padding: 100px 0;
    height: 110vh;    
    background: #e6e6f3;
}

#services .container{
    padding: 50px 5%;
    height: 100%;
}

#services h1{
    color: #1b1729;
    margin-bottom: 80px;
}

.services-list{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    grid-gap: 40px;
    color: #1b1729;
    margin: 10% 0;
}

.service1{
    background: #d47636;
}

.service1 a{
    color: #d47636;
}

.service2{
    background: #c6aed2;
}

.service2 a{
    color: #c6aed2;
}

.service3{
    background: #80c3b3;
}

.service3 a{
    color: #80c3b3;
}

.services-list div{
    padding: 40px;
    font-size: 18px;
    font-weight: 550;
    transition: transform 0.3s, box-shadow 0.3s;
    z-index: 100;
    border: solid 2px #1b1729;

}

.services-list div i{
    font-size: 72px;
    margin-bottom: 30px;
}

.services-list div h2{
    font-size: 30px;
    margin-bottom: 15px;
}

.services-list div a{
    text-decoration: none;
    font-size: 15px;
    margin-top: 20px;
    display: inline-block;
}

.services-list div:hover{
    box-shadow: 0px 0px 5px 5px #646b89;
    transform: scale(1.03);
}

.services-list div:hover a{
    color: #1b1729;
}

/*------------------------websites-----------------------*/

#my-work{
    display: flex;
}


#websites{
    padding: 50px 0;
    height: 100vh;
    background: #1b1729;
}

#websites .container{
    width: 2200px;
    height: 100%;
    padding: 50px 5%;
}

#websites h1{
    margin-bottom: 30px;
}

.website-list{
    display: flex;
    grid-gap: 200px;
    margin-left: 20px;
    height:75%;
}

.website{
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
    transition: transform 0.3s, box-shadow 0.3s;
    height: 100%;
}

.website:hover{
    transform: scale(1.03);
    box-shadow: 0px 0px 5px 5px #646b89;

}

.website1{
    background: #d47636;
}

.website2{
    background: #c6aed2;
}

.website3{
    background: #80c3b3;
}

.website img{
    width: 450px;
    height: 250px;
    display: block;
    border-top: solid 1px #1b1729;
    border-right: solid 1px #1b1729;
    border-left: solid 1px #1b1729;
}

.website-description{
    width: 450px;
    height: 100%;
    padding: 20px;
    overflow: wrap;
    display: flex;
    align-items: center;
    flex-direction: column;
    text-align: center;
    color: #1b1729;
    background: #e2e2f8;
    border-bottom: solid 1px #1b1729;
    border-right: solid 1px #1b1729;
    border-left: solid 1px #1b1729;
}

.website-description h2{
    font-weight: bold;
    margin: 3% 0;
}

.website-description .buttons{
    position: absolute;
    bottom: 5%;
    display: flex;
}

.website-description .buttons a{
    margin: 0 20px;
    color: #1b1729;
    text-decoration: none;
    font-size: 32px;
    line-height: 60px;
    background: #b1b1c2c4;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    text-align: center;
}

.website-description .buttons a:hover{
    background: #646b89;
}

.websitesDates h3{
    font-size: 20px;
    margin-top: 10px;
}

.websiteDate1, .websiteDate2, .websiteDate3{
    position: absolute;
    bottom: 69px;
    min-width: 510px;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 28px;
}

.websiteDate2{
    left: 785px;
}

.websiteDate3{
    left: 1450px;
}

#websitesProgressBar{
    display: inline-block;
    position: absolute;
    bottom: 115px;
    left: 365px;
    height: 3px;
    width: 0;
    background: #e2e2f8;
}


/*------------------------games-----------------------*/
#games{
    padding: 50px 0;
    height: 100vh;
    background: #1b1729;
    border-left: solid 3px #e2e2f8;
    border-right: solid 3px #e2e2f8 ;
}

#games .container{
    width: 2900px;
    height: 100%;
    padding: 50px 5%;
}

#games h1{
    margin-bottom: 30px;
}

.game-list{
    display: flex;
    grid-gap: 200px;
    margin-left: 20px;
    height: 75%;
}

.game{
    position: relative;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 10px;
    transition: transform 0.3s, box-shadow 0.3s;
    height: 100%;
}

.game:hover{
    transform: scale(1.03);
    box-shadow: 0px 0px 5px 5px #646b89;

}

.game1{
    background: #d47636;
}

.game2{
    background: #c6aed2;
}

.game3{
    background: #80c3b3;
}

.game4{
    background: #d47636;
}
/* ... */

